Commit 9 --> primer commit después de solucionar lo de las credenciales

--- a/MorsaProgramando/holaSpring/src/main/resources/application.properties
+++ b/MorsaProgramando/holaSpring/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 logging.level.com.morsaprogramando.holaSpring: TRACE
 spring.output.ansi.enabled=ALWAYS
+#server.error.include-message: always  ---> Para mostrar los reason en los HttpStatus
