Commit 10 --> Completado Video de HttpStatus I

--- a/MorsaProgramando/holaSpring/src/main/resources/application.properties
+++ b/MorsaProgramando/holaSpring/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-logging.level.com.morsaprogramando.holaSpring: TRACE
+#logging.level.com.morsaprogramando.holaSpring: TRACE
+logging.level.com.morsaprogramando.holaSpring: DEBUG
 spring.output.ansi.enabled=ALWAYS
 #server.error.include-message: always  ---> Para mostrar los reason en los HttpStatus
